Improve adjust width funtion to fix the un-align with of header and body.

--- a/css/profile-pages.css
+++ b/css/profile-pages.css
@@ -1,5 +1,5 @@
 #profiles{
-  min-width: 87.4%;
+  min-width: 98%;
 }
 #profiles td {
   line-height: 16px;
